--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="index.css" />
     <title>3 - Calculadora</title>
 </head>
@@ -11,15 +12,28 @@
     <div class="wrapper">
         <div class="calculator">
             <div class="panel-container">
-                <div class="row">
-                    <input id="my-input" type="text" name="calculation-string" value="0" /> 
+                <div class="row input-row">
+                    <div class="input-top-text">
+                        <i class="hamburger-menu fa fa-bars fa-2x"></i>
+                    </div>
+                    <input id="my-input" type="text" name="calculation-string" value="0" disabled /> 
+                    <div class="input-bottom-text">
+                        <spam class="alert">alert</spam>
+                    </div>
+                </div>
+                <div class="row extra-functions">
+                    <button></button>
+                    <button></button>
+                    <button></button>
+                    <button></button>
+                    <button></button>
                 </div>
                 <div class="row first-row">
                     <button class="command" value="AC">AC</button>
-                    <button value="(" class="parenthesis operator">(</button>
-                    <button value=")" class="parenthesis operator">)</button>
+                    <button class="parenthesis operator" value="(">(</button>
+                    <button class="parenthesis operator" value=")">)</button>
                     <button class="operator" value="per">%</button>
-                    <button class="punctuation" value="div">/</button>
+                    <button class="operator" value="div">/</button>
                 </div>
                 <div class="row second-row">
                     <button class="number" value="7">7</button>
