--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="index.css" />
-    <title>3 - Calculadora</title>
+    <title>Math Calculator</title>
 </head>
 <body>
     <div class="wrapper">
@@ -14,44 +14,36 @@
             <div class="panel-container">
                 <div class="row input-row">
                     <div class="input-top-text">
-                        <i class="hamburger-menu fa fa-bars fa-2x"></i>
+                        <i style="visibility: hidden" class="hamburger-menu fa fa-bars fa-2x"></i>
                     </div>
                     <input id="my-input" type="text" name="calculation-string" value="0" disabled /> 
                     <div class="input-bottom-text">
                         <spam class="alert">alert</spam>
                     </div>
                 </div>
-                <div class="row extra-functions">
-                    <button></button>
-                    <button></button>
-                    <button></button>
-                    <button></button>
-                    <button></button>
-                </div>
                 <div class="row first-row">
                     <button class="command" value="AC">AC</button>
-                    <button class="parenthesis operator" value="(">(</button>
-                    <button class="parenthesis operator" value=")">)</button>
-                    <button class="operator" value="per">%</button>
-                    <button class="operator" value="div">/</button>
+                    <button class="operator" value="√">√</button>
+                    <button class="operator" value="%">%</button>
+                    <button class="operator" value="/">/</button>
                 </div>
                 <div class="row second-row">
                     <button class="number" value="7">7</button>
                     <button class="number" value="8">8</button>
                     <button class="number" value="9">9</button>
-                    <button class="operator" value="mul">x</button>
+                    <button class="operator" value="x">x</button>
                 </div>
                 <div class="row third-row">
                     <button class="number" value="4">4</button>
                     <button class="number" value="5">5</button>
                     <button class="number" value="6">6</button>
-                    <button class="operator" value="sub">-</button>
+                    <button class="operator" value="-">-</button>
                 </div>
                 <div class="row fourth-row">
                     <button class="number" value="1">1</button>
                     <button class="number" value="2">2</button>
                     <button class="number" value="3">3</button>
-                    <button class="operator" value="add">+</button>
+                    <button class="operator" value="+">+</button>
                 </div>    
                 <div class="row fifth-row">
                     <button class="number" value="0">0</button>
